...
          onPress={handleGoBack}
        >
          <Ionicons name="arrow-back" size={24} color="white" />
        </TouchableOpacity>

        <View style={styles.headerContent}>
          <Text style={styles.headerTitle}>Verification OTP</Text>
          <Text style={styles.headerSubtitle}>
            A One Time Password (OTP) has been sent to your {email}.{'\n'}
            Enter it below to proceed.
          </Text>
        </View>
      </View>
...
